k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    env: demo
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-server-loadbalancer
spec:
  type: LoadBalancer
  selector:
    env: demo
    tier: demo-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
