k8s/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  labels:
    env: demo
spec:
  type: NodePort
  ports:
    - nodePort: 30001
      port: 80
      targetPort: 2000
  selector:
    env: demo
    tier: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: demo-server-nodeport
  labels:
    env: demo
spec:
  type: NodePort
  ports:
    - nodePort: 30002
      port: 4000
      targetPort: 4000
  selector:
    env: demo
    tier: demo-server

---
apiVersion: v1
kind: Service
metadata:
  name: redis-nodeport
  labels:
    env: demo
    type: redis
spec:
  type: NodePort
  ports:
    - nodePort: 30003
      port: 6379
      targetPort: 6379
  selector:
    env: demo
    tier: demo-server
    type: redis

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  labels:
    env: demo
    app: prometheus
    type: monitoring
spec:
  type: NodePort
  ports:
    - nodePort: 30004
      port: 9090
      targetPort: 9090
  selector:
    env: demo
    app: prometheus
    tier: monitoring

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  labels:
    env: demo
    app: grafana
    type: monitoring
spec:
  type: NodePort
  ports:
    - nodePort: 30005
      port: 3000
      targetPort: 3000
  selector:
    env: demo
    app: grafana
    tier: monitoring

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-loki-nodeport
  labels:
    env: demo
    app: loki
    type: monitoring
spec:
  type: NodePort
  ports:
    - nodePort: 30006
      port: 3100
      targetPort: 3100
  selector:
    env: demo
    app: loki
    tier: monitoring
